--- a/src_gw_bse/external_conversion/quantum_espresso/README
+++ b/src_gw_bse/external_conversion/quantum_espresso/README
@@ -38,3 +38,4 @@ doublepack : Default value is 'false'.
 shift_flag : To calculate Polarizability when G=G'=q=0, we use shifted wavefunctions. If you have calculated occupied state wavefunctions with k grid with small shifts, make this flag true. 
 gpp_flag : If true, it prints density file ("rho.dat") that is used for GPP calculations. 
 Vxc_flag : not implemented yet.
+nbandschunk : (optional) number of bands to be read for single qexml_read_wfc call. If this number is too small (e.g. like 1) and your system is big, it will take a lot of time. But if this number is too large, it may suffer from out of memory. If you don't specify this number, the converter assumes that the machine has 10GB of memory, and adjust this number accordingly. 
