modified the tex

--- a/PAW_develop/Notes_papers/PAWEESnewn2g.tex
+++ b/PAW_develop/Notes_papers/PAWEESnewn2g.tex
@@ -3673,7 +3673,7 @@ n^{(\rP\ l,M,\rEES)}(\hat \bs) &=& \sum_J \sum_{\hspJn}^{\pzn} n_J^{(\rP\ l,M,\r
 \end{eqnarray}
 
 
-\subsection{The energy terms} \\
+\subsection{The energy terms}
 
 \underline{Kinetic energy:}
 \begin{eqnarray}
@@ -4179,7 +4179,7 @@ The $Z_{IJ} ^{(W,\rgr,\rEES)}$ arises from 5 terms:
 \end{enumerate}
 In the 5 subsections below we construct each of these 5 pieces
 
-\subsubsection{The $Z_{IJ}^{(W,\rgr,\rcore,\rEES)}$ from the PAW kinetic energy}\\
+\subsubsection{The $Z_{IJ}^{(W,\rgr,\rcore,\rEES)}$ from the PAW kinetic energy}
 
 In order to derive $Z_{IJ}^{(W,\rgr,\rcore,\rEES)}$, we start from the ``$A_{1I}^{(\Psi,\rEES)}(\hs) $'' terms from the kinetic energy:
 \begin{equation}
@@ -4208,7 +4208,7 @@ and
 
 
 
-\subsubsection{The $Z_{IJ}^{(W,\rgr,\rP\ 1,\rshort,\rEES)}$ from 4 interactions with the ($\rP$ 1) densities}\\
+\subsubsection{The $Z_{IJ}^{(W,\rgr,\rP\ 1,\rshort,\rEES)}$ from 4 interactions with the ($\rP$ 1) densities}
 
 In order to derive $Z_{IJ}^{(W,\rgr,\rP\ 1,\rshort,\rEES)}$, we start from the ``$A_{1I}^{(\Psi,\rEES)}(\hs) $'' terms from core short local e-ion, core exchange correlation, short smooth-core Hartree, short core-core Hartree associated with the ($\rP$ 1) densities:
 
@@ -4244,7 +4244,7 @@ The KS potentials on the $f$-grid are defined in
 \end{enumerate}
 
 
-\subsubsection{The $Z_{IJ}^{(W,\rgr,\rP\ 2,\rshort,\rEES)}$ from 4 interactions with the ($\rP$ 2) densities}\\
+\subsubsection{The $Z_{IJ}^{(W,\rgr,\rP\ 2,\rshort,\rEES)}$ from 4 interactions with the ($\rP$ 2) densities}
 
 In order to derive $Z_{IJ}^{(W,\rgr,\rP\ 2,\rshort,\rEES)}$, we start from the ``$A_{1I}^{(\Psi,\rEES)}(\hs) $'' terms from short local e-ion, PAW core exchange correlation, short smooth-core Hartree, short core-core Hartree associated with the ($\rP$ 2) densities:
 
@@ -4262,7 +4262,7 @@ Z_{IJ}^{(W,\rgr,\rP\ 2,\rshort,\rEES)}&=&Z_{IJ}^{(\rS,\rEES)}\phi_J^{(\rgr,\rP\ 
 
 The grouped $\phi_J^{(\rgr,\rshort,\rEES)}(\br_f)$ KS potential is defined in Eq.\eqref{gr:groupedshortrf}. \\
 
-\subsubsection{The $Z_{IJ}^{(W,\rgr,\rP\ 1,\rlong,\rEES)}$ from long local and Hartree with the ($\rP$ 1) densities}\\
+\subsubsection{The $Z_{IJ}^{(W,\rgr,\rP\ 1,\rlong,\rEES)}$ from long local and Hartree with the ($\rP$ 1) densities}
 
 In order to derive $Z_{IJ}^{(W,\rgr,\rP\ 1,\rlong,\rEES)}$, we start from the ``$A_{1I}^{(\Psi,\rEES)}(\hs) $'' terms from long local e-ion, long Hartree associated with the ($\rP$ 1) densities:
 
@@ -4291,12 +4291,12 @@ The KS potentials on the $f$-grid are defined in
 
 
 
-\subsubsection{The $Z_{IJ}^{(W,\rgr,\rP\ 2,\rlong,\rEES)}$ from long local and Hartree with the ($\rP$ 2) densities}\\
+\subsubsection{The $Z_{IJ}^{(W,\rgr,\rP\ 2,\rlong,\rEES)}$ from long local and Hartree with the ($\rP$ 2) densities}
 
 In order to derive $Z_{IJ}^{(W,\rgr,\rP\ 2,\rlong,\rEES)}$, we start from the ``$A_{1I}^{(\Psi,\rEES)}(\hs) $'' terms from long local e-ion, long Hartree associated with the ($\rP$ 2) densities:
 
 \begin{eqnarray}
-F_I^{(W,\rgr,\rP\ 2,\rlong,\rEES)}(\hs) &=& \sum_J Z_{IJ}^{(W,\rgr,\rP\ 2,\rlong,\rEES)} \sum_{\bk} \Mp(\bu_{J}-\hat \bs) \delta_{\hat \bs,\bl_J-\bk} \hsinpEES \\
+F_I^{(W,\rgr,\rP\ 2,\rlong,\rEES)}(\hs) &=& \sum_J Z_{IJ}^{(W,\rgr,\rP\ 2,\rlong,\rEES)} \sum_{\bk} \Mp(\bu_{J}-\hat \bs) \delta_{\hat \bs,\bl_J-\bk} \hsinpEES
 \end{eqnarray}
 
 where
@@ -5714,7 +5714,7 @@ To understand the background term, consider a uniform system with charge density
 E^{(\mathrm{uniform})}
 &= \frac{1}{2} \int_{\rD(\bh)} \rd \br \int_{\rD(\bh)} \rd \br' \frac{Q^2}{V^2} \sum_{\bm} \frac{1}{|\br - \br' + \bm\bh|}\\
 &= \frac{Q^2}{2V^3} \sum_{\bg} \frac{4\pi}{g^2}\int_{\rD(\bh)} \rd \br \int_{\rD(\bh)} \rd \br' e^{-i\bg\cdot \br} e^{-i\bg\cdot \br'}\\
-&= \frac{Q^2}{2V^3} \sum_{\bg} \frac{4\pi}{g^2}\int_{\rD(\bh)}\rd \bre^{-i\bg\cdot \br} V \delta_{\bg,0}\\
+&= \frac{Q^2}{2V^3} \sum_{\bg} \frac{4\pi}{g^2}\int_{\rD(\bh)}\rd \br e^{-i\bg\cdot \br} V \delta_{\bg,0}\\
 &= \frac{Q^2}{2V^2} \lim_{\bg \rightarrow 0} \frac{4\pi}{g^2}\int_{\rD(\bh)}\rd \br e^{-i\bg\cdot \br}\\
 &= \frac{Q^2}{2V} \lim_{\bg \rightarrow 0} \frac{4\pi}{g^2}
 \end{split}
