--- a/src_gw_bse/external_conversion/quantum_espresso/README
+++ b/src_gw_bse/external_conversion/quantum_espresso/README
@@ -20,7 +20,7 @@ EXAMPLE:
 In this directory, a sample input file is included (in.pw2openatom). 
 
 Before running pw2openatom.x, STATES directory should exist in your working directory.
-"makewfndir.sh" will create directories for you.
+"makedir.sh" will create directories for you.
 Usage for makewfndir.sh: 
 ./makewfndir.sh num_kpoint num_spin
 
