update the readme

--- a/PAW_develop/dggev_long_pkg/README
+++ b/PAW_develop/dggev_long_pkg/README
@@ -4,3 +4,6 @@ Next, we make sure we call the _long rountines where needed by dggev
 We delete any routine we did not rename
 We make a little compile script for the renaming routines which we will package into a library called "dggev_long"
 When we try this, we link dggev_long and lapack
+
+Command to wrap .o into a library
+ar rvs libacme.a file1.o file2.o file3.o 
