--- a/PAW_develop/dggev_long_pkg/README
+++ b/PAW_develop/dggev_long_pkg/README
@@ -1,7 +1,11 @@
-We go through all these routines, and change any routine that has a double precision number in the call
-	or in the body to the same name just replacing d with q (dggev goes to qggev)
-We also change the file name from d to q (dggev.f goes to qggev)
-Next, we make sure we call the q rountines where needed and update external statements
-
-Command to wrap .o into a library
-ar rvs libacme.a file1.o file2.o file3.o 
+======================================================================
+1) We go through all these routines, and change any routine that has a double precision number in the call
+   or in the body to the same name just replacing d with q (dggev goes to qggev)
+2) We change any d0 d- d+ to q0 q- q+ in the code
+3) We also change the file name from d to q (dggev.f goes to qggev)
+4) We make sure we call the q rountines where needed and update all the external statements
+5) Delete any unchanged routines
+6) compile all the qstuff.f -c
+7) Make a library of all the .o
+     "ar rvs libqggev.a qfile1.o qfile2.o qfile3.o ..."
+======================================================================
