--- a/PAW_develop/Notes_papers/PAW_EES_physics.tex
+++ b/PAW_develop/Notes_papers/PAW_EES_physics.tex
@@ -5416,7 +5416,7 @@ E^{(\rcomp,\mathrm{grid})}
 Here, $\delta$ is a small number invoked to smooth the singularity. Alternatively, we can use the partial wave expansion of $1/|\br_f-\br_{f'}|$
 
 \begin{equation}
-\frac{1}{|\br_f-\br_{f'}|} = \sum_{l=0}^\infty \sum_{m=-l}^l \left( \frac{4\pi}{2l+1}\right) \left( \frac{r_{<}^{l}}{r_{>}^{l+1}} \right) Y_{lm} (\theta,\phi) Y_{lm}^* (\theta',\phi') 
+\frac{1}{|\br_f-\br_{f'}|} = \sum_{l=0}^\infty \sum_{m=-l}^l \left( \frac{4\pi}{2l+1}\right) \left( \frac{r_{<}^{l}}{r_{>}^{l+1}} \right) Y_{lm} (\theta_f,\phi_f) Y_{lm}^* (\theta_{f'},\phi_{f'}) 
 \end{equation}
 
 where
@@ -5432,7 +5432,7 @@ In practice, the upper limit of the $l$ sum is truncated to $l_{\mathrm{max}}$, 
 \begin{equation}
 \begin{split}
 E_{\rH}^{(\rcomp,\rself,\rgrid)}
-&= \frac{1}{2}\sum_f w_f \sum_{f'} w_{f'} \sum_J \tilde Z_J^2 \left(\frac{\al_J^2}{\pi}\right)^3 \re^{-\al_J^2 \left(r_f^2+r_{f'}^2\right)}\sum_{l=0}^\infty \sum_{m=-l}^l \left( \frac{4\pi}{2l+1}\right) \left( \frac{r_{>}^{l}}{r_{<}^{l+1}} \right) Y_{lm} (\theta,\phi) Y_{lm}^* (\theta',\phi') \\
+&= \frac{1}{2}\sum_f w_f \sum_{f'} w_{f'} \sum_J \tilde Z_J^2 \left(\frac{\al_J^2}{\pi}\right)^3 \re^{-\al_J^2 \left(r_f^2+r_{f'}^2\right)}\sum_{l=0}^\infty \sum_{m=-l}^l \left( \frac{4\pi}{2l+1}\right) \left( \frac{r_{<}^{l}}{r_{>}^{l+1}} \right) Y_{lm} (\theta_f,\phi_f) Y_{lm}^* (\theta_{f'},\phi_{f'}) \\
 \end{split}
 \end{equation}
 
@@ -6124,16 +6124,64 @@ I_{2k+3} &= I_{2k+1} (k+1)a^{-1}
 \end{equation}
 
 
+\section{Scratch Paper}
+\begin{equation}
+\begin{split}
+E_{\rH}^{(\rcomp,\rself,\rgrid)}
+&= \frac{1}{2}\sum_f w_f \sum_{f'} w_{f'} \sum_J \tilde Z_J^2 \left(\frac{\al_J^2}{\pi}\right)^3 \re^{-\al_J^2 \left(r_f^2+r_{f'}^2\right)}\sum_{l=0}^\infty \sum_{m=-l}^l \left( \frac{4\pi}{2l+1}\right) \left( \frac{r_{<}^{l}}{r_{>}^{l+1}} \right) Y_{lm} (\theta_f,\phi_f) Y_{lm}^* (\theta_{f'},\phi_{f'}) 
+\end{split}
+\end{equation}
 
+\begin{equation}
+\begin{split}
+E_{\rH}^{(\rcomp,\rself,\rgrid)}
+&= 8\pi^2\sum_f w_f \sum_{f'} w_{f'} \sum_J \tilde Z_J^2 \left(\frac{\al_J^2}{\pi}\right)^3 \re^{-\al_J^2 \left(r_f^2+r_{f'}^2\right)} \left( \frac{1}{r_{>}} \right)
+\end{split}
+\end{equation}
 
+Translating back to integral form:
+\begin{equation}
+\begin{split}
+E_{\rH}^{(\rcomp,\rself)}
+&= 8\pi^2 \sum_J \tilde Z_J^2 \left(\frac{\al_J^2}{\pi}\right)^3  \int_0^\infty \rd r \int_0^\infty \rd r' \re^{-\al_J^2 \left(r^2+r'^2\right)} \left( \frac{r^2 r'^2}{r_{>}} \right)\\
+&= 8\pi^2 \sum_J \tilde Z_J^2 \left(\frac{\al_J^2}{\pi}\right)^3  \int_0^\infty \rd r \re^{-\al_J^2 r^2} \left[ \int_0^r \rd r' r r'^2 \re^{-\al_J^2 r'^2}+ \int_r^\infty \rd r' r^2 r' \re^{-\al_J^2 r'^2} \right]\\
+&= 8\pi^2 \sum_J \tilde Z_J^2 \left(\frac{\al_J^2}{\pi}\right)^3 \left[  \int_0^\infty \rd r \re^{-\al_J^2 r^2} \int_0^r \rd r' r r'^2 \re^{-\al_J^2 r'^2}+  \int_0^\infty \rd r \re^{-\al_J^2 r^2} \int_r^\infty \rd r' r^2 r' \re^{-\al_J^2 r'^2} \right]\\
+&= 8\pi^2 \sum_J \tilde Z_J^2 \left(\frac{\al_J^2}{\pi}\right)^3 \left[  \int_0^\infty \rd r\ r \re^{-\al_J^2 r^2} \int_0^r \rd r' r'^2 \re^{-\al_J^2 r'^2}+  \int_0^\infty \rd r\ r^2 \re^{-\al_J^2 r^2} \int_r^\infty \rd r'\ r' \re^{-\al_J^2 r'^2} \right]\\
+&= 8\pi^2 \sum_J \tilde Z_J^2 \left(\frac{\al_J^2}{\pi}\right)^3 \left[  \int_0^\infty \rd r\ r \re^{-\al_J^2 r^2} \frac{(-2 \al_J r)\re^{-\al_J^2 r^2} + \sqrt{\pi} \rerf(\al_J r)}{4 \al_J^3}\right.\\  
+&\left. \hspace{10mm}+ \int_0^\infty \rd r\ r^2 \re^{-\al_J^2 r^2} \frac{\re^{-\al_J^2 r^2}}{2 \al_J^2} \right]\\
+&= 2\pi^2 \sum_J \tilde Z_J^2 \left(\frac{\al_J}{\pi}\right)^3 \int_0^\infty \rd r\ r \re^{-\al_J^2 r^2} \sqrt{\pi} \rerf(\al_J r) \\
+&= 2\pi^2 \sum_J \tilde Z_J^2 \left(\frac{\al_J}{\pi}\right)^3 \frac{\sqrt{\pi}}{2\sqrt{2}\al_J^2} \\
+&= \frac{1}{\sqrt{2\pi}} \sum_J \tilde Z_J^2 \al_J
+\end{split}
+\end{equation}
 
+The screened self Hartree term with $\beta$, the inverse screening length, is:
+\begin{equation}
+\begin{split}
+E_{\rH}^{(\mathrm{screen,self})} 
+&= \frac{1}{2}\sum_J \tilde Z_J^2 \left(\frac{\al_J^2}{\pi}\right)^3 \int \rd \br \int \rd \br'  \frac{\rerf(\beta|\br - \br'|)}{|\br-\br'|}\re^{-\al_J^2 \left(r^2+r'^2\right)}\\
+&= \frac{1}{2}\sum_J \tilde Z_J^2 \left(\frac{\al_J^2}{\pi}\right)^3 \frac{1}{8\pi^3}\int \rd \bg \int \rd \br \int \rd \br'  \frac{4\pi}{g^2} \re^{-\frac{g^2}{4\beta^2}} \re^{i\bg\cdot(\br - \br')}\re^{-\al_J^2 \left(r^2+r'^2\right)}\\
+&= \frac{1}{2}\sum_J \tilde Z_J^2 \left(\frac{\al_J^2}{\pi}\right)^3 \frac{1}{2\pi^2}\int \rd \bg \frac{1}{g^2} \re^{-\frac{g^2}{4\beta^2}}  \int \rd \br \int \rd \br'  \re^{i\bg\cdot(\br - \br')}\re^{-\al_J^2 \left(r^2+r'^2\right)}\\
+&= \frac{1}{2}\sum_J \tilde Z_J^2 \left(\frac{\al_J^2}{\pi}\right)^3 \frac{1}{2\pi^2}\int \rd \bg \frac{1}{g^2} \re^{-\frac{g^2}{4\beta^2}}  \int \rd \br  \re^{i\bg\cdot\br}\re^{-\al_J^2 r^2} \int \rd \br'  \re^{-i\bg\cdot\br'}\re^{-\al_J^2 r'^2}\\
+&= \frac{1}{2}\sum_J \tilde Z_J^2 \left(\frac{\al_J^2}{\pi}\right)^3 \frac{1}{2\pi^2}\int \rd \bg \frac{1}{g^2} \re^{-\frac{g^2}{4\beta^2}}  \frac{\pi^3}{\al_J^6} \re^{-\frac{g^2}{2\al_J^2}}\\
+&= \frac{1}{2}\sum_J \tilde Z_J^2 \frac{1 }{2\pi^2}\int \rd \bg \frac{1}{g^2} \re^{-\frac{g^2}{4\beta^2}} \re^{-\frac{g^2}{2\al_J^2}}\\
+&= \frac{1}{2}\sum_J \tilde Z_J^2 \frac{1 }{2\pi^2}\int \rd \bg \frac{1}{g^2} \re^{-\frac{g^2}{\gamma^2}} \\
+&= \frac{1}{2}\sum_J \tilde Z_J^2 \frac{1 }{2\pi^2}4\pi \int_0^\infty \rd g\ \re^{-\frac{g^2}{\gamma^2}}\\
+&= \frac{1}{2}\sum_J \tilde Z_J^2 \frac{1 }{2\pi^2}4\pi \frac{\gamma\sqrt{\pi}}{2}\\
+&= \frac{1}{2\sqrt{\pi}}\sum_J \tilde Z_J^2 \gamma
+\end{split}
+\end{equation}
 
+where
+\begin{equation}
+\frac{1}{\gamma^2} = \frac{1}{2\al_J^2} + \frac{1}{4\beta^2}
+\end{equation}
 
-
-
-
-
-
+Unscreened Hartree is in the limit $\beta \rightarrow \infty$,
+\begin{equation}
+E_{\rH}^{(\mathrm{unscreen,self})} 
+= \frac{1}{\sqrt{2\pi}}\sum_J \tilde Z_J^2 \al_J
+\end{equation}
 
 
 
